Change to CSS Challenge
Changes made to index.html and main. css

--- a/index.html
+++ b/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>Example</title>
+      <title>CSS Challenge</title>
 
       <script src="vendor.bundle.js" type="text/javascript" charset="utf-8" defer></script>
       <script src="bundle.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body class="container-fluid">
-      
+      <nav>
+        <div class = "menu 1">Home</div>
+        <div class = "menu 2">Blog</div>
+        <div class = "menu 3">About</div>
+        <div class = "menu 4">Contact</div>
+      </nav>
+        <section>
+          <div>Logo</div>
+        </section>
+          <section class = "toparticle">
+            <article>article 1</article>
+            <article>article 2</article>
+            <article>article 3</article>
+          </section>
+          <section class = "bottomarticle">
+            <article>feature article</article>
+          </section>
+            <aside>
+              <div>Sidebar</div>
+            </aside>
+      <footer>
+        <div>Footer 1</div>
+        <div>Footer 2</div>
+        <div>Footer 3</div>
+      </footer>
     </body>
 </html>
