--- a/index.html
+++ b/index.html
@@ -5,32 +5,35 @@
 
       <script src="vendor.bundle.js" type="text/javascript" charset="utf-8" defer></script>
       <script src="bundle.js" type="text/javascript" charset="utf-8" defer></script>
+      <link rel="stylesheet" type="text/css" href="main.css">
     </head>
     <body class="container-fluid">
       <nav>
-        <div class = "menu 1">Home</div>
-        <div class = "menu 2">Blog</div>
-        <div class = "menu 3">About</div>
-        <div class = "menu 4">Contact</div>
+        <div class = "home">Home</div>
+        <div class = "blog">Blog</div>
+        <div class = "about">About</div>
+        <div class = "contact">Contact</div>
       </nav>
+
         <section>
-          <div>Logo</div>
+          <div class = "logo">Logo</div>
         </section>
-          <section class = "toparticle">
-            <article>article 1</article>
-            <article>article 2</article>
-            <article>article 3</article>
-          </section>
-          <section class = "bottomarticle">
-            <article>feature article</article>
-          </section>
-            <aside>
-              <div>Sidebar</div>
-            </aside>
+      <section class = "posts">
+          <div class = "articles">article 1</div>
+          <div class = "articles">article 2</div>
+          <div class = "articles">article 3</div>
+          <div class = "bottomarticle">feature article</div>
+
+      </section>
+
+        <aside>
+          <div>Sidebar</div>
+        </aside>
+          <div class = "twitter">
+            <a href = "http://twitter.com/styletab">@StyleTab</a>
+          </div>
       <footer>
-        <div>Footer 1</div>
-        <div>Footer 2</div>
-        <div>Footer 3</div>
+        <div>Footer</div>
       </footer>
     </body>
 </html>
